--- a/src/ui/components/About/About.scss
+++ b/src/ui/components/About/About.scss
@@ -5,16 +5,18 @@
   align-items: center;
   display: flex;
   justify-content: center;
-  margin-top: calc(100vh - $navHeight);
   position: relative;
+  // height: 200vh;
+  border: 2px solid yellow;
 
   &__inner {
-    background: purple;
+    // background: purple;
     display: flex;
     flex-direction: column;
     gap: 2rem;
     padding-block: 4rem;
     width: 100%;
+    // height: 200vh;
   }
 
   &__header {
